--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,6 +37,7 @@
                 {% else %}
                     <ul>
                         <li><a href="/login">log-in</a></li>
+                        <li><a href="/register">register</a></li>
                     </ul>
                 {% endif %}
             </nav>
