--- a/static/user.css
+++ b/static/user.css
@@ -22,19 +22,22 @@ svg.svg-icon:hover {
 }
 
 .dialogue {
-    display: grid;
-    grid-template-areas:
-        'title close'
-        'description description'
-        'main main';
-    text-align: center;
-    justify-items: center;
     background-color: var(--grey);
     padding: 1em;
     border-radius: 20px;
     position: fixed;
-    z-index:2;
+    z-index: 2;
     right: 0;
+    width: fit-content;
+}
+
+.in-dialogue {
+    display: inline-flex;
+    justify-content: space-between;
+    padding: 0.2em;
+    max-width: 320px;
+    height: fit-content;
+    text-align: left;
 }
 
 .dialogue-title {
