--- a/static/forms.css
+++ b/static/forms.css
@@ -1,3 +1,64 @@
+label {
+    font-size: smaller;
+}
+
+.input_group {
+
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 34px;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  border-radius: 50%;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--accent);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+
 input[type="file"] {
     background-color: #ffffff;
     padding: 5pt;
@@ -9,11 +70,22 @@ input[type="file"] {
 
 input[type="text"] {
     color: var(--accent);
-    font-family: 'Cutive Mono', monospace;
+    font-family: 'Cutive Mono' + monospace;
     padding: 3pt;
     border-radius: 10px;
     border-style: none;
     text-align: center;
+}
+
+input[type="text-area"] {
+    display:block;
+    width: 100%;
+    background-color: var(--background);
+    padding: 2pt;
+    margin-top:5pt;
+    margin-bottom:5pt;
+    border:none;
+    border-radius: 3pt;
 }
 
 input[type="submit"] {
@@ -39,10 +111,105 @@ input[type="submit"]:hover {
     box-shadow: 2px 2px 0px 0px var(--black);
 }
 
-label {
-    font-size: smaller;
+input[type=range] {
+  height: 26px;
+  -webkit-appearance: none;
+  margin: 10px 0;
+  width: 100%;
+  background: transparent;
 }
 
-form {
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow:none;
+  background: var(--black);
+  border-radius: 3px;
+  border: 0px solid var(--black);
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow:none;
+  border:3px solid var(--background);
+  height: 18px;
+  width: 18px;
+  border-radius: 50px;
+  background: var(--black);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: var(--black);
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow:none;
+  background: var(--black);
+  border-radius: 3px;
+  border: 0px solid var(--black);
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow:none;
+  border:3px solid var(--background);
+  height: 18px;
+  width: 18px;
+  border-radius: 50px;
+  background: var(--black);
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 3px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
 
+input[type=range]::-ms-fill-lower {
+  background: var(--black);
+  border: 0px solid var(--black);
+  border-radius: 6px;
+  box-shadow:none;
+}
+
+input[type=range]::-ms-fill-upper {
+  background: var(--black);
+  border: 0px solid var(--black);
+  border-radius: 6px;
+  box-shadow:none;
+}
+
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow:none;
+  border:3px solid var(--background);
+  height: 18px;
+  width: 18px;
+  border-radius: 50px;
+  background: var(--black);
+  cursor: pointer;
+}
+
+input[type=range]:focus::-ms-fill-lower {
+  background: var(--black);
+}
+
+input[type=range]:focus::-ms-fill-upper {
+  background: var(--black);
+}
+
+input[type=range]::-webkit-slider-thumb:active {
+    height: 22px;
+    width: 22px;
+}
+
+input:focus {
+    outline: none;
 }
