--- a/static/master.css
+++ b/static/master.css
@@ -33,7 +33,7 @@ a {
     color: inherit;
 }
 
-a:hover, a:focus, li:focus {
+a:hover, a:focus {
     outline: none;
     text-decoration: inherit;
     color: var(--accent);
@@ -90,6 +90,32 @@ li {
     color: inherit;
 }
 
+svg.svg-icon {
+    fill: none;
+    stroke: var(--black);
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 2pt;
+    width: 25pt;
+    height: 25pt;
+}
+svg.svg-icon:hover {
+    fill:var(--accent-fade);
+}
+
+svg.svg-shape {
+    fill: var(--black);
+    height: 25pt;
+    width: 70pt;
+    stroke: var(--black);
+    stroke-width: 3pt;
+}
+
+svg.svg-shape:hover {
+    fill: var(--accent);
+    stroke: var(--accent);
+}
+
 .toast {
     opacity: 1;
     display: none;
@@ -111,7 +137,7 @@ li {
     display: grid;
     grid-template-areas:
     'in-page-header in-page-main';
-    grid-template-columns: min-content auto;
+    grid-template-columns: 20% 80%;
     height: 100%;
 }
 
@@ -133,6 +159,38 @@ li {
     flex-direction: column;
     align-items: center;
 }
+
+@keyframes fade-in {
+    from: {opacity: 0;}
+    to: {opacity: 1;}
+}
+
+.center-pop-up {
+    background-color: #80808085;
+    position: fixed;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    transition: opacity .3s;
+}
+
+.center-pop-up.active {
+    animation-name: fade-in;
+    animation-duration: 1s;
+}
+
+.alert {
+    background-color: var(--accent-fade);
+    padding: 0;
+    transform-origin: top;
+    transition: padding .3s;
+    position: fixed;
+    height: 0;
+    width: 100%;
+    contain: strict;
+}
+
+
 
 @media only screen and (max-width:960px) {
     nav {
