--- a/templates/home_layout.html
+++ b/templates/home_layout.html
@@ -5,24 +5,11 @@
 <link rel="stylesheet" href="/static/forms.css">
 <link rel="stylesheet" href="/static/user.css">
 
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+{% endblock %}
 
-    <symbol id="key" viewBox="0 0 70 70">
-        <path d="M31.69,14.26c-.81-1.24-.7-2.76-1.21-4.08-.63-1.64-1.59-2.57-3.34-1.2a153,153,0,0,1,2.65,19.43C30.22,35,32,41.33,33,47.9c-3.23.28-5.51,1.57-6.8,4.28-1.47,3.1.2,6.82,3.59,8.41,4.28,2,8.23,1,12-1.25a6,6,0,0,0,2.53-6.19C44,50.86,43,48.47,39.86,48s-3.38-3.43-3.52-5.71a89,89,0,0,0-2.47-17c-.47-1.85.66-3.19,3.35-3.52a26.89,26.89,0,0,1,3.59-.6c1.11,0,2.12-.45,2.17-1.87s-.46-2-1.93-2a1.77,1.77,0,0,1-1.44-.68"/><path d="M39,16.1c2.39-1.08,2.53-1.4,1.68-3.84-3.13.1-6.27.16-8.88,2.28"/><path d="M33.22,50.3c-1.42.59-3,1-3.8,2.43-.48.83-.94,1.84-.06,2.86,1.67,1.94,8,2.8,9.88.73,1.29-1.42,1.38-3.46-.3-4.27s-3.31-2.28-5.48-1.75"/>
-    </symbol>
-
-    <symbol id="pencil" viewBox="0 0 70 70">
-        <path d="M39.57,17.35c1-2.47,2.35-4.46,5.25-5.25,1.78-.49,3.1-.53,4.34.81,1,1.09,2,2.2,2.9,3.24a4.17,4.17,0,0,1-.75,2.51C44.52,27.55,39.2,37.41,33.05,46.72c-1.38,2.08-3,4-4.54,6-.69.89-8.93,6.7-10,5.26-.84-1.12-.56-2.61-.33-4.05,1.06-6.63,5.4-11.63,8.45-17.26,3.66-6.77,8.48-12.75,13-19"/><path d="M43.41,21.07c-3.36,5-7.25,9.59-10,14.9S27.8,46.23,24.93,51.31"/><path d="M40.29,17.23a27.09,27.09,0,0,0,7.2,5.52"/><path d="M20.37,48.43C23,49.7,25,51.81,27.09,53.83"/><line x1="18.02" y1="54.96" x2="20.37" y2="57.08"/>
-    </symbol>
-
-    <symbol id="add-button" viewBox="0 0 70 70">
-        <path d="M59.5,23.75c-2.41-6.85-7.12-11.7-13.42-15.14a18,18,0,0,0-6.24-1.67h-.25c-2.16.4-4.33.75-6.47,1.21-6.66,1.43-10.93,6-14.64,11.28C16,23,13.83,27,13.32,31.2A41.8,41.8,0,0,0,13,36.15c.06,7.21,2.52,13.74,10.74,18.56a24.86,24.86,0,0,0,17.31,3.41,24.84,24.84,0,0,0,11.36-4.67c-.15.22-.32.41-.47.63a19.74,19.74,0,0,0,5.76-6.65A28.52,28.52,0,0,0,59.5,23.75Z"/><path d="M23.74,55C15.42,50.1,13,43.46,13,36.15a42.1,42.1,0,0,1,.32-5.21c.51-4.24,2.65-8.2,5.16-11.78.54-.76,1.09-1.5,1.65-2.23a37.84,37.84,0,0,0-5.91,6.82c-2.51,3.57-4.64,7.54-5.15,11.77C8,44.75,9.31,53.33,19.48,59.29A24.82,24.82,0,0,0,36.79,62.7c6.34-1.05,11.62-3.78,15.15-8.62a25.18,25.18,0,0,1-10.89,4.3A24.8,24.8,0,0,1,23.74,55Z"/><path d="M53.41,31.44c-.18-1.11-.09-2.25-.21-3.39-.14-1.32-.47-1.74-2.07-1.53A59.7,59.7,0,0,1,42,27c-.72-3.48-1.06-6.82-1.5-10.46-2.06.51-4.09.21-6,.37-.71,1.85,0,3.55,0,5.24,0,1.54.15,3.1.16,4.65,0,.44-.18,1,.68.84h-.9c-3.81.57-7.6,1.27-11.43,1.63-1.68.16-2.27.69-2.24,2.18a9.49,9.49,0,0,0,1,4.71c4.18-.67,8.28-.63,12.25-1.54a1.83,1.83,0,0,1,2.43,1.7c.41,2.87.76,5.77.9,8.66.18,3.69,1.73,4.86,5.4,3.8.38-.11.74-.3,1.21-.49A44.67,44.67,0,0,0,43,34.75l.31.29c2.67-.4,5.39-.32,8.06-.84C53.72,33.75,53.78,33.66,53.41,31.44Z"/>
-    </symbol>
-
-    <symbol id="close" viewBox="0 0 70 70">
-        <path d="M30.16,6.66c-.89-.91-1.57-2-2.42-3-1-1.14-1.57-1.32-2.82-.13a59,59,0,0,1-7.69,6.17C14.31,7,11.81,4.08,9,1,7.55,2.76,5.59,3.75,4,5.12c.6,2.15,2.31,3.29,3.46,4.82s2.18,2.77,3.22,4.19c.29.41.51,1,1.14.36l-.78.56C8.1,18,5.26,21,2.16,23.69.8,24.89.64,25.75,1.65,27.1a11.35,11.35,0,0,0,4,3.74c3.2-3.22,6.79-5.75,9.66-9.07,1.09-1.26,2.32-.92,3.23.05,2.26,2.4,4.48,4.85,6.52,7.43,2.6,3.29,4.71,3.4,7.22.13A13.36,13.36,0,0,0,33,28.17a53.37,53.37,0,0,0-9.68-12l.46.07c2.07-2,4.49-3.67,6.47-5.8C32,8.6,32,8.48,30.16,6.66Z"/>
-    </symbol>
-</svg>
+{% block background %}
+<div class="background right home">
+</div>
 {% endblock %}
 
 {% block pop_up %}
@@ -72,9 +59,36 @@
 
     <div id ="user-info" class="inner-header">
         <div class="avatar-round">
+            <img class="avatar" src="../static/images/avatars/owl.png" alt="">
         </div>
-        <h1>hi, {{ user }}</h1>
+        <h1>hi, {{ session['username']}}</h1>
         <h6>this is home</h6>
+        <ul>
+            <li>
+                <a href="/"  class="vertical-content-grid" style="height:fit-content">
+                    <svg class="svg-icon button" class="inner-header">
+                        <use xlink:href="#bookmark"/>
+                    </svg>
+                    <h6 class="inner-main">decks</h6>
+                </a>
+            </li>
+            <li>
+                <a href="/my_bookmarks" class="vertical-content-grid" style="height:fit-content">
+                    <svg class="svg-icon button" class="inner-header">
+                        <use xlink:href="#bookmark"/>
+                    </svg>
+                    <h6 class="inner-main">bookmarks</h6>
+                </a>
+            </li>
+            <li>
+                <a href="/home_?edit=upoloads" class="vertical-content-grid" style="height:fit-content">
+                    <svg class="svg-icon button" class="inner-header">
+                        <use xlink:href="#photo"/>
+                    </svg>
+                    <h6 class="inner-main">uploads</h6>
+                </a>
+            </li>
+        </ul>
         <ul>
             <li><a href="/logout">log out</a></li>
             <li><a href="#">settings</a></li>
