--- a/templates/image.html
+++ b/templates/image.html
@@ -5,18 +5,28 @@
 {% endblock %}
 
 {% block main %}
+{% if image %}
 <div class="center-content">
-    <div class="gallery-item single">
-        <div class="image-container single">
-            <img class="gallery-image single" src="{{ dir }}/{{ img_path }}" alt="">
+    <form class="" action="\image" method="post">
+        <div class="gallery-item single">
+            <div class="image-container single">
+                <img class="gallery-image single" src="{{ image['path']}}" alt="">
+            </div>
+            <div class="gallery-details">
+                <input type="hidden" name="image_id" value="{{ image['id']}}">
+                    {% if image['cards']%}
+                        {% for card in image['cards'] %}
+                            <input type="text-area" name="cards" value="{{ card }}" placeholder="manually add the cards">
+                        {% endfor %}
+                    {% endif %}
+                    <input type="text-area" name="cards" value="{{ card }}" placeholder="manually add the cards">
+            </div>
         </div>
-        <div class="gallery-details">
-            <form class="" action="index.html" method="post">
-                <input type="text" name="cards" value="" placeholder="a unicorn from the future with horrible taste">
-                <input type="text" name="" value="{{ session['username'] }}">
-                <input type="submit" name="" value="ok">
-            </form>
-        </div>
-    </div>
+        <input type="submit" name="button" value="update">
+        <input type="submit" name="button" value="delete">
+    </form>
 </div>
+{% else %}
+    <h1>{{ error }}</h1>
+{% endif %}
 {% endblock %}
